# Mini-Java-Compiler

./: .gitignore  CMakeLists.txt  LogCleaner.cpp  LogCleaner.h  README.md  main.cpp
cmake/: Sanitize.cmake
compiler/: declarations.h  driver.cpp  driver.hh  nodes.h  parser.y  scanner.l
compiler/IR/assembly/: Instruction.cpp  Instruction.h
compiler/IR/blocks/: Block.cpp  Block.h  BlockGraph.cpp  BlockGraph.h  ConditionalBlock.cpp  ConditionalBlock.h  SimpleBlock.cpp  SimpleBlock.h
compiler/IR/generators/: Label.cpp  Label.h  Temporary.cpp  Temporary.h
compiler/IR/nodes/: BaseElement.h  ExpressionList.cpp  ExpressionList.h
compiler/IR/nodes/expressions/: BinopExpression.cpp  BinopExpression.h  CallExpression.cpp  (+12 more)
compiler/IR/types/: BinaryOperatorType.cpp  BinaryOperatorType.h  LogicOperatorType.cpp  LogicOperatorType.h
compiler/IR/visitors/: AssemblyGenerationVisitor.cpp  AssemblyGenerationVisitor.h  BlockBuilderVisitor.cpp  BlockBuilderVisitor.h  BlockFormerVisitor.cpp  BlockFormerVisitor.h  DoubleCallEliminateVisitor.cpp  DoubleCallEliminateVisitor.h  ESEQEliminator.cpp  ESEQEliminator.h  IRTNodes.h  IRTStorage.h  Linearizer.cpp  Linearizer.h  PrintVisitor.cpp  PrintVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  Visitor.h
compiler/IR/wrappers/: ExpressionWrapper.cpp  ExpressionWrapper.h  StatementWrapper.cpp  StatementWrapper.h  SubtreeWrapper.h
compiler/classes/: ArrayType.cpp  ArrayType.h  Formals.cpp  Formals.h  Lvalue.cpp  Lvalue.h  Program.cpp  Program.h  ScopeListOfStatements.cpp  ScopeListOfStatements.h  Type.cpp  Type.h  errors.h
compiler/classes/expressions/: ArithmeticalExpression.cpp  ArithmeticalExpression.h  ArrayAccessExpression.cpp  ArrayAccessExpression.h  Expression.h  FieldAccess.cpp  FieldAccess.h  LengthExpression.cpp  LengthExpression.h  LogicalExpression.cpp  LogicalExpression.h  MethodExpression.cpp  MethodExpression.h  MethodInvocation.cpp  MethodInvocation.h  NewArrayExpression.cpp  NewArrayExpression.h  NewVariableExpression.cpp  NewVariableExpression.h  NumeralExpression.cpp  NumeralExpression.h  This.cpp  This.h  VariableExpression.cpp  VariableExpression.h
compiler/classes/statements/: AssertStatement.cpp  AssertStatement.h  AssignmentStatement.cpp  AssignmentStatement.h  ClassDeclaration.cpp  ClassDeclaration.h  IfStatement.cpp  IfStatement.h  ListOfStatements.cpp  ListOfStatements.h  MainClass.cpp  MainClass.h  MethodDeclaration.cpp  MethodDeclaration.h  PrintStatement.cpp  PrintStatement.h  ReturnStatement.cpp  ReturnStatement.h  Statement.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileStatement.cpp  WhileStatement.h
compiler/function_processing/: ClassStorage.cpp  ClassStorage.h  Frame.cpp  Frame.h  FrameEmulator.cpp  FrameEmulator.h  FrameTranslator.cpp  FrameTranslator.h  FunctionStorage.cpp  FunctionStorage.h  FunctionTable.cpp  FunctionTable.h
compiler/function_processing/address/: Address.h  AddressInFrame.cpp  AddressInFrame.h  AddressInRegister.cpp  AddressInRegister.h
compiler/objects/: Class.cpp  Class.h  Function.cpp  Function.h  Integer.cpp  Integer.h  Method.cpp  Method.h  Object.cpp  Object.h  PrimitiveArrayObject.cpp  PrimitiveArrayObject.h  PrimitiveObject.cpp  PrimitiveObject.h  PrimitiveSimpleObject.cpp  PrimitiveSimpleObject.h  UninitObject.cpp  UninitObject.h  Void.h
compiler/objects/objects_creation/: ArrayCreation.h  ObjectCreation.h
compiler/objects/values/: ArrayValue.cpp  ArrayValue.h  Value.h  VariableValue.cpp  VariableValue.h
compiler/symbol_table/: NewScopeLayer.cpp  NewScopeLayer.h  NewScopeLayerTree.cpp  NewScopeLayerTree.h  ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.cpp  Symbol.h
compiler/tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test25.txt  test26.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  tree_output.txt
compiler/tests/logs/: created_files.txt
compiler/tests_IR/: test2.txt  test3.txt  test4.txt  test8.txt
compiler/tests_IR/logs/: created_files.txt
compiler/visitors/: Executor.cpp  Executor.h  FunctionProcessingVisitor.cpp  FunctionProcessingVisitor.h  IRTreeBuildVisitor.cpp  IRTreeBuildVisitor.h  NewFunctionProcessingVisitor.cpp  NewFunctionProcessingVisitor.h  NewSymbolTreeVisitor.cpp  NewSymbolTreeVisitor.h  PrintTreeVisitor.cpp  PrintTreeVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  TypeCheckingVisitor.cpp  TypeCheckingVisitor.h  Visitor.h
interpreter/: driver.cpp  driver.hh  ebnf.txt  lex.yy.cc  parser.cpp  parser.hh  parser.output  parser.tab.c  parser.tab.h  parser.y  scanner.cpp  scanner.h  scanner.l
interpreter/classes/: ArrayType.cpp  ArrayType.h  Formals.cpp  Formals.h  Lvalue.cpp  Lvalue.h  Program.cpp  Program.h  Type.cpp  Type.h
interpreter/classes/expressions/: ArithmeticalExpression.cpp  ArithmeticalExpression.h  ArrayAccessExpression.cpp  ArrayAccessExpression.h  Expression.h  LengthExpression.cpp  LengthExpression.h  LogicalExpression.cpp  LogicalExpression.h  MethodExpression.cpp  MethodExpression.h  MethodInvocation.cpp  MethodInvocation.h  NewArrayExpression.cpp  NewArrayExpression.h  NewVariableExpression.cpp  NewVariableExpression.h  NumeralExpression.cpp  NumeralExpression.h  This.cpp  This.h  VariableExpression.cpp  VariableExpression.h
interpreter/classes/statements/: AssertStatement.cpp  AssertStatement.h  AssignmentStatement.cpp  AssignmentStatement.h  ClassDeclaration.cpp  ClassDeclaration.h  IfStatement.cpp  IfStatement.h  ListOfStatements.cpp  ListOfStatements.h  MainClass.cpp  MainClass.h  MethodDeclaration.cpp  MethodDeclaration.h  PrintStatement.cpp  PrintStatement.h  ReturnStatement.cpp  ReturnStatement.h  Statement.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileStatement.cpp  WhileStatement.h
interpreter/tests/: run.sh  test1.txt
interpreter/visitors/: Node.h  Visitor.h
other/: Makefile  lex_example.txt  oberon.l  oberon.y
(+23 files in other folders)
